--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^0.8.7+5
   shared_preferences: ^2.1.1
   connectivity_plus: ^4.0.1
+  flutter_staggered_grid_view: ^0.6.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
