--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,9 @@ dependencies:
   image_picker: ^0.8.7+5
   shared_preferences: ^2.1.1
   connectivity_plus: ^4.0.1
-  flutter_staggered_grid_view: ^0.6.2
+  uuid: ^3.0.7
+  cached_network_image: ^3.2.3
+  flutter_image_slideshow: ^0.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
