Store screen, visiting store screen, completed, there is some ui issue.Ui issue will fix later.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   connectivity_plus: ^4.0.1
   uuid: ^3.0.7
   cached_network_image: ^3.2.3
+  url_launcher: ^6.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
