--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   uuid: ^3.0.7
   cached_network_image: ^3.2.3
   url_launcher: ^6.0.3
+  provider: ^6.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
