--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   provider: ^6.0.5
   flutter_localization:
   intl: ^0.17.0
+  flutter_screenutil: ^5.7.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
